Implement module detection